--- a/.github/workflows/get_bot.yml
+++ b/.github/workflows/get_bot.yml
@@ -8,7 +8,7 @@ on:
       name:
         description: 'Bot Unique Name'
         required: true
-        default: 'payment-type'
+        default: 'NordisPaymentAPI-EBO'
 
 jobs:
   build:
