--- a/.github/workflows/publish_FlexSTG_BOT.yml
+++ b/.github/workflows/publish_FlexSTG_BOT.yml
@@ -8,7 +8,7 @@ on:
       name:
         description: 'Bot Unique Name'
         required: true
-        default: 'Credit-Card-Payment'
+        default: 'NordisPaymentAPI-EBO'
 
 jobs:
   build:
@@ -33,6 +33,6 @@ jobs:
          TWILIO_ACCOUNT_SID: ${{ secrets.TWILIO_ACCOUNT_SID_FlexStg }}
          TWILIO_API_KEY: ${{ secrets.TWILIO_API_KEY_SID_FlexStg }}
          TWILIO_API_SECRET: ${{ secrets.TWILIO_API_SECRET_FlexStg }}
-        run: twilio autopilot:update --schema model/schema_FlexSTG.json --unique-name Credit-Card-Payment
+        run: twilio autopilot:update --schema model/schema_FlexSTG.json --unique-name NordisPaymentAPI-EBO
        
       
