--- a/package.json
+++ b/package.json
@@ -9,13 +9,12 @@
   },
   "dependencies": {
     "twilio-run": "^2.6.0",
-    "axios": "^0.21.0",
     "dateformat": ""
   },
   "devDependencies": {
-    "twilio-run": "^2.6.0",
-    "axios": "^0.21.0",
-    "dateformat": ""
+    "axios": "^0.21.1",
+    "dateformat": "",
+    "twilio-run": "^2.6.0"
   },
   "engines": {
     "node": "12"
